--- a/src/app/pages/chat/components/chatroom-title-bar/chatroom-title-bar.component.scss
+++ b/src/app/pages/chat/components/chatroom-title-bar/chatroom-title-bar.component.scss
@@ -1,6 +1,6 @@
 @import '../../../../../styles/variable';
 
 .room-title {
-  padding: 1em 0 1em 2em;
+  padding: 1em 0 1em 0;
   border-bottom: 2px solid $grey;
 }
