--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -11,7 +11,7 @@ body {
 }
 
 .navbar {
-  height: 80px;
+  min-height: 80px;
 }
 
 button {
